src/snapshots/jjpwrgem__cli__tests__object_open_curly.snap
---
source: src/cli.rs
expression: annotated
---
error: expected key or closed curly brace, found no significant characters
 --> stdin:1:1
  |
1 | {
  | ^
  | |
  | expected due to `{`
  |
help: insert the missing curly brace
  |
1 | {}
  |  +
